add progress to unsupervised learning project

--- a/14_apprentissage_non_supervise-part2/Project/report_latex/report.tex
+++ b/14_apprentissage_non_supervise-part2/Project/report_latex/report.tex
@@ -7,6 +7,7 @@
 \usepackage{fancyref}
 \usepackage{hyperref}
 
+
 \title{Clustering de documents numérisés}
 \author{\textsc{Youcef} - \textsc{Kacer}}
 \date{20 Aout 2016}
@@ -41,7 +42,7 @@ Elles représentent chacune une page numérisée tirée de magazines et de journ
 \includegraphics[scale=0.2]{images/6.jpg}
 \end{center}
 \caption{Exemples d'images du dataset}
-\label{exemple1}
+\label{exemple}
 \end{figure}
 \clearpage
 
@@ -301,6 +302,1131 @@ Nous présentons donc ci-après les résultats sur 96 fichiers avec les descript
 \caption{image donnant la précision moyenne maximale - en bas sa vérité-terrain}
 \label{meilleur_precision}
 \end{figure}
+
+
+image 10.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/10_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 10.jpg, binarisation, decomposition, vérité-terrain}
+\label{10}
+\end{figure}
+\clearpage
+
+
+image 11.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/11_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 11.jpg, binarisation, decomposition, vérité-terrain}
+\label{11}
+\end{figure}
+\clearpage
+
+
+image 12.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/12_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 12.jpg, binarisation, decomposition, vérité-terrain}
+\label{12}
+\end{figure}
+\clearpage
+
+
+image 13.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/13_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 13.jpg, binarisation, decomposition, vérité-terrain}
+\label{13}
+\end{figure}
+\clearpage
+
+
+image 14.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/14_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 14.jpg, binarisation, decomposition, vérité-terrain}
+\label{14}
+\end{figure}
+\clearpage
+
+
+image 15.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/15_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 15.jpg, binarisation, decomposition, vérité-terrain}
+\label{15}
+\end{figure}
+\clearpage
+
+
+image 16.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/16_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 16.jpg, binarisation, decomposition, vérité-terrain}
+\label{16}
+\end{figure}
+\clearpage
+
+
+image 17.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/17_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 17.jpg, binarisation, decomposition, vérité-terrain}
+\label{17}
+\end{figure}
+\clearpage
+
+
+image 18.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/18_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 18.jpg, binarisation, decomposition, vérité-terrain}
+\label{18}
+\end{figure}
+\clearpage
+
+
+image 19.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/19_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 19.jpg, binarisation, decomposition, vérité-terrain}
+\label{19}
+\end{figure}
+\clearpage
+
+
+image 1cw.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/1cw_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 1cw.bmp, binarisation, decomposition, vérité-terrain}
+\label{1cw}
+\end{figure}
+\clearpage
+
+
+image 1g.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/1g_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 1g.tif, binarisation, decomposition, vérité-terrain}
+\label{1g}
+\end{figure}
+\clearpage
+
+
+image 1.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/1_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 1.jpg, binarisation, decomposition, vérité-terrain}
+\label{1}
+\end{figure}
+\clearpage
+
+
+image 1m.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/1m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 1m.bmp, binarisation, decomposition, vérité-terrain}
+\label{1m}
+\end{figure}
+\clearpage
+
+
+image 1s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/1s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 1s.bmp, binarisation, decomposition, vérité-terrain}
+\label{1s}
+\end{figure}
+\clearpage
+
+
+image 20.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/20_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 20.jpg, binarisation, decomposition, vérité-terrain}
+\label{20}
+\end{figure}
+\clearpage
+
+
+image 21.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/21_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 21.jpg, binarisation, decomposition, vérité-terrain}
+\label{21}
+\end{figure}
+\clearpage
+
+
+image 22.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/22_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 22.jpg, binarisation, decomposition, vérité-terrain}
+\label{22}
+\end{figure}
+\clearpage
+
+
+image 23.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/23_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 23.jpg, binarisation, decomposition, vérité-terrain}
+\label{23}
+\end{figure}
+\clearpage
+
+
+image 24.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/24_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 24.jpg, binarisation, decomposition, vérité-terrain}
+\label{24}
+\end{figure}
+\clearpage
+
+
+image 25.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/25_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 25.jpg, binarisation, decomposition, vérité-terrain}
+\label{25}
+\end{figure}
+\clearpage
+
+
+image 26.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/26_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 26.jpg, binarisation, decomposition, vérité-terrain}
+\label{26}
+\end{figure}
+\clearpage
+
+
+image 27.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/27_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 27.jpg, binarisation, decomposition, vérité-terrain}
+\label{27}
+\end{figure}
+\clearpage
+
+
+image 28.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/28_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 28.jpg, binarisation, decomposition, vérité-terrain}
+\label{28}
+\end{figure}
+\clearpage
+
+
+image 29.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/29_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 29.jpg, binarisation, decomposition, vérité-terrain}
+\label{29}
+\end{figure}
+\clearpage
+
+
+image 2cw.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/2cw_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 2cw.bmp, binarisation, decomposition, vérité-terrain}
+\label{2cw}
+\end{figure}
+\clearpage
+
+
+image 2g.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/2g_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 2g.tif, binarisation, decomposition, vérité-terrain}
+\label{2g}
+\end{figure}
+\clearpage
+
+
+image 2.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/2_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 2.jpg, binarisation, decomposition, vérité-terrain}
+\label{2}
+\end{figure}
+\clearpage
+
+
+image 2m.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/2m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 2m.bmp, binarisation, decomposition, vérité-terrain}
+\label{2m}
+\end{figure}
+\clearpage
+
+
+image 2s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/2s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 2s.bmp, binarisation, decomposition, vérité-terrain}
+\label{2s}
+\end{figure}
+\clearpage
+
+
+image 30.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/30_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 30.jpg, binarisation, decomposition, vérité-terrain}
+\label{30}
+\end{figure}
+\clearpage
+
+
+image 31.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/31_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 31.jpg, binarisation, decomposition, vérité-terrain}
+\label{31}
+\end{figure}
+\clearpage
+
+
+image 32.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/32_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 32.jpg, binarisation, decomposition, vérité-terrain}
+\label{32}
+\end{figure}
+\clearpage
+
+
+image 33.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/33_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 33.jpg, binarisation, decomposition, vérité-terrain}
+\label{33}
+\end{figure}
+\clearpage
+
+
+image 34.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/34_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 34.jpg, binarisation, decomposition, vérité-terrain}
+\label{34}
+\end{figure}
+\clearpage
+
+
+image 35.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/35_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 35.jpg, binarisation, decomposition, vérité-terrain}
+\label{35}
+\end{figure}
+\clearpage
+
+
+image 36.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/36_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 36.jpg, binarisation, decomposition, vérité-terrain}
+\label{36}
+\end{figure}
+\clearpage
+
+
+image 37.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/37_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 37.jpg, binarisation, decomposition, vérité-terrain}
+\label{37}
+\end{figure}
+\clearpage
+
+
+image 38.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/38_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 38.jpg, binarisation, decomposition, vérité-terrain}
+\label{38}
+\end{figure}
+\clearpage
+
+
+image 39.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/39_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 39.jpg, binarisation, decomposition, vérité-terrain}
+\label{39}
+\end{figure}
+\clearpage
+
+
+image 3cw.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/3cw_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 3cw.bmp, binarisation, decomposition, vérité-terrain}
+\label{3cw}
+\end{figure}
+\clearpage
+
+
+image 3g.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/3g_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 3g.tif, binarisation, decomposition, vérité-terrain}
+\label{3g}
+\end{figure}
+\clearpage
+
+
+image 3.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/3_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 3.jpg, binarisation, decomposition, vérité-terrain}
+\label{3}
+\end{figure}
+\clearpage
+
+
+image 3m.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/3m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 3m.bmp, binarisation, decomposition, vérité-terrain}
+\label{3m}
+\end{figure}
+\clearpage
+
+
+image 3s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/3s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 3s.bmp, binarisation, decomposition, vérité-terrain}
+\label{3s}
+\end{figure}
+\clearpage
+
+
+image 40.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/40_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 40.jpg, binarisation, decomposition, vérité-terrain}
+\label{40}
+\end{figure}
+\clearpage
+
+
+image 41.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/41_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 41.jpg, binarisation, decomposition, vérité-terrain}
+\label{41}
+\end{figure}
+\clearpage
+
+
+image 42.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/42_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 42.jpg, binarisation, decomposition, vérité-terrain}
+\label{42}
+\end{figure}
+\clearpage
+
+
+image 43.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/43_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 43.jpg, binarisation, decomposition, vérité-terrain}
+\label{43}
+\end{figure}
+\clearpage
+
+
+image 44.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/44_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 44.jpg, binarisation, decomposition, vérité-terrain}
+\label{44}
+\end{figure}
+\clearpage
+
+
+image 45.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/45_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 45.jpg, binarisation, decomposition, vérité-terrain}
+\label{45}
+\end{figure}
+\clearpage
+
+
+image 46.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/46_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 46.jpg, binarisation, decomposition, vérité-terrain}
+\label{46}
+\end{figure}
+\clearpage
+
+
+image 47.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/47_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 47.jpg, binarisation, decomposition, vérité-terrain}
+\label{47}
+\end{figure}
+\clearpage
+
+
+image 48.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/48_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 48.jpg, binarisation, decomposition, vérité-terrain}
+\label{48}
+\end{figure}
+\clearpage
+
+
+image 49.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/49_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 49.jpg, binarisation, decomposition, vérité-terrain}
+\label{49}
+\end{figure}
+\clearpage
+
+
+image 4cw.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/4cw_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 4cw.bmp, binarisation, decomposition, vérité-terrain}
+\label{4cw}
+\end{figure}
+\clearpage
+
+
+image 4g.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/4g_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 4g.tif, binarisation, decomposition, vérité-terrain}
+\label{4g}
+\end{figure}
+\clearpage
+
+
+image 4.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/4_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 4.jpg, binarisation, decomposition, vérité-terrain}
+\label{4}
+\end{figure}
+\clearpage
+
+
+image 4m.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/4m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 4m.bmp, binarisation, decomposition, vérité-terrain}
+\label{4m}
+\end{figure}
+\clearpage
+
+
+image 4s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/4s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 4s.bmp, binarisation, decomposition, vérité-terrain}
+\label{4s}
+\end{figure}
+\clearpage
+
+
+image 50.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/50_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 50.jpg, binarisation, decomposition, vérité-terrain}
+\label{50}
+\end{figure}
+\clearpage
+
+
+image 51.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/51_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 51.jpg, binarisation, decomposition, vérité-terrain}
+\label{51}
+\end{figure}
+\clearpage
+
+
+image 52.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/52_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 52.jpg, binarisation, decomposition, vérité-terrain}
+\label{52}
+\end{figure}
+\clearpage
+
+
+image 53.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/53_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 53.jpg, binarisation, decomposition, vérité-terrain}
+\label{53}
+\end{figure}
+\clearpage
+
+
+image 54.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/54_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 54.jpg, binarisation, decomposition, vérité-terrain}
+\label{54}
+\end{figure}
+\clearpage
+
+
+image 55.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/55_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 55.jpg, binarisation, decomposition, vérité-terrain}
+\label{55}
+\end{figure}
+\clearpage
+
+
+image 56.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/56_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 56.jpg, binarisation, decomposition, vérité-terrain}
+\label{56}
+\end{figure}
+\clearpage
+
+
+image 57.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/57_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 57.jpg, binarisation, decomposition, vérité-terrain}
+\label{57}
+\end{figure}
+\clearpage
+
+
+image 58.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/58_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 58.jpg, binarisation, decomposition, vérité-terrain}
+\label{58}
+\end{figure}
+\clearpage
+
+
+image 59.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/59_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 59.jpg, binarisation, decomposition, vérité-terrain}
+\label{59}
+\end{figure}
+\clearpage
+
+
+image 5cw.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/5cw_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 5cw.bmp, binarisation, decomposition, vérité-terrain}
+\label{5cw}
+\end{figure}
+\clearpage
+
+
+image 5g.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/5g_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 5g.tif, binarisation, decomposition, vérité-terrain}
+\label{5g}
+\end{figure}
+\clearpage
+
+
+image 5.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/5_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 5.jpg, binarisation, decomposition, vérité-terrain}
+\label{5}
+\end{figure}
+\clearpage
+
+
+image 5m.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/5m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 5m.bmp, binarisation, decomposition, vérité-terrain}
+\label{5m}
+\end{figure}
+\clearpage
+
+
+image 5s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/5s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 5s.bmp, binarisation, decomposition, vérité-terrain}
+\label{5s}
+\end{figure}
+\clearpage
+
+
+image 60.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/60_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 60.jpg, binarisation, decomposition, vérité-terrain}
+\label{60}
+\end{figure}
+\clearpage
+
+
+image 61.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/61_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 61.jpg, binarisation, decomposition, vérité-terrain}
+\label{61}
+\end{figure}
+\clearpage
+
+
+image 62.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/62_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 62.jpg, binarisation, decomposition, vérité-terrain}
+\label{62}
+\end{figure}
+\clearpage
+
+
+image 63.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/63_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 63.jpg, binarisation, decomposition, vérité-terrain}
+\label{63}
+\end{figure}
+\clearpage
+
+
+image 64.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/64_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 64.jpg, binarisation, decomposition, vérité-terrain}
+\label{64}
+\end{figure}
+\clearpage
+
+
+image 65.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/65_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 65.jpg, binarisation, decomposition, vérité-terrain}
+\label{65}
+\end{figure}
+\clearpage
+
+
+image 66.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/66_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 66.jpg, binarisation, decomposition, vérité-terrain}
+\label{66}
+\end{figure}
+\clearpage
+
+
+image 67.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/67_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 67.jpg, binarisation, decomposition, vérité-terrain}
+\label{67}
+\end{figure}
+\clearpage
+
+
+image 68.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/68_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 68.jpg, binarisation, decomposition, vérité-terrain}
+\label{68}
+\end{figure}
+\clearpage
+
+
+image 69.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/69_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 69.jpg, binarisation, decomposition, vérité-terrain}
+\label{69}
+\end{figure}
+\clearpage
+
+
+image 6cw.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/6cw_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 6cw.bmp, binarisation, decomposition, vérité-terrain}
+\label{6cw}
+\end{figure}
+\clearpage
+
+
+image 6g.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/6g_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 6g.tif, binarisation, decomposition, vérité-terrain}
+\label{6g}
+\end{figure}
+\clearpage
+
+
+image 6.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/6_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 6.jpg, binarisation, decomposition, vérité-terrain}
+\label{6}
+\end{figure}
+\clearpage
+
+
+image 6m.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/6m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 6m.bmp, binarisation, decomposition, vérité-terrain}
+\label{6m}
+\end{figure}
+\clearpage
+
+
+image 6s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/6s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 6s.bmp, binarisation, decomposition, vérité-terrain}
+\label{6s}
+\end{figure}
+\clearpage
+
+
+image 70.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/70_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 70.jpg, binarisation, decomposition, vérité-terrain}
+\label{70}
+\end{figure}
+\clearpage
+
+
+image 71.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/71_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 71.jpg, binarisation, decomposition, vérité-terrain}
+\label{71}
+\end{figure}
+\clearpage
+
+
+image 72.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/72_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 72.jpg, binarisation, decomposition, vérité-terrain}
+\label{72}
+\end{figure}
+\clearpage
+
+
+image 73.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/73_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 73.jpg, binarisation, decomposition, vérité-terrain}
+\label{73}
+\end{figure}
+\clearpage
+
+
+image 74.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/74_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 74.jpg, binarisation, decomposition, vérité-terrain}
+\label{74}
+\end{figure}
+\clearpage
+
+
+image 75.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/75_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 75.jpg, binarisation, decomposition, vérité-terrain}
+\label{75}
+\end{figure}
+\clearpage
+
+
+image 7.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/7_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 7.jpg, binarisation, decomposition, vérité-terrain}
+\label{7}
+\end{figure}
+\clearpage
+
+
+image 7m.tif : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/7m_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 7m.tif, binarisation, decomposition, vérité-terrain}
+\label{7m}
+\end{figure}
+\clearpage
+
+
+image 7s.bmp : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/7s_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 7s.bmp, binarisation, decomposition, vérité-terrain}
+\label{7s}
+\end{figure}
+\clearpage
+
+
+image 8.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/8_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 8.jpg, binarisation, decomposition, vérité-terrain}
+\label{8}
+\end{figure}
+\clearpage
+
+
+image 9.jpg : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/9_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image 9.jpg, binarisation, decomposition, vérité-terrain}
+\label{9}
+\end{figure}
+\clearpage
+
+
+image documentation.txt : 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.6]{../data_papers/documentation_res_hog_hsv_kmeans_all.jpg}
+\end{center}
+\caption{de gauche à droite : image documentation.txt, binarisation, decomposition, vérité-terrain}
+\label{documentation}
+\end{figure}
+\clearpage
+
+
+
 
 
 \clearpage
