add progress to unsupervised learning project

--- a/14_apprentissage_non_supervise-part2/Project/report_latex/biblio.bib
+++ b/14_apprentissage_non_supervise-part2/Project/report_latex/biblio.bib
@@ -3,10 +3,10 @@ Pour author, les noms et prénoms sont séparés par une vigule, et les différe
 	author={A. M. Vilkin, I. V. Safonov, M. A. Egorova},
 	journal={Pattern Recognition and Image Analysis March 2013},
 	title={Algorithm for segmentation of documents based on texture features},
-	volume={23}
+	volume={23},
 	year={2013},
 	month={mar},
-	url={https://archive.ics.uci.edu/ml/machine-learning-databases/00306/}
+	url={https://archive.ics.uci.edu/ml/machine-learning-databases/00306/},
 	notes={sympathique}
 }
 
@@ -14,7 +14,7 @@ Pour author, les noms et prénoms sont séparés par une vigule, et les différe
 	author = {"M. Lichman"},
 	year = {"2013"},
 	title = {"{UCI} Machine Learning Repository"},
-	url = {http://archive.ics.uci.edu/ml}
+	url = {http://archive.ics.uci.edu/ml},
 	institution = {University of California, Irvine, School of Information and Computer Sciences}
 } 
 
