--- a/14_apprentissage_non_supervise-part2/Project/report_latex/report.tex
+++ b/14_apprentissage_non_supervise-part2/Project/report_latex/report.tex
@@ -8,6 +8,7 @@
 \usepackage{hyperref}
 
 
+
 \title{Clustering de documents numérisés}
 \author{\textsc{Youcef} - \textsc{Kacer}}
 \date{20 Aout 2016}
@@ -101,7 +102,7 @@ minimale \ref{seuillage}.\\
 \includegraphics[scale=0.3]{images/1g.jpg}
 \includegraphics[scale=0.075]{images/1g_binary.jpg}
 \end{center}
-\caption{seuillage}
+\caption{seuillage d'Otsu}
 \label{seuillage}
 \end{figure}
 
@@ -124,8 +125,8 @@ Reste à definir une classe ($texte$ ou $illustration$) aux pixels restants.
 Les contours au voisinage d'un pixel, semblent être une information pertinente pour caractériser les caractères d'un document numérisé.\\
 En effet, les caractères sont généralement d'une couleur uniforme sur un fond uniforme (pour plus de lisiblité), ce qui a la 
 particularité de bien faire ressortir les gradients\\
-Pour extraire cette information, deux méthodes seront utilisées : l'application d'un filtre Laplacien et le calcul de l'histogramme orienté du gradient 
-\cite{Dalal05histogramsof}, cela sur un patch carré. 
+Pour extraire cette information, deux méthodes seront utilisées : ou bien l'application d'un filtre Laplacien, ou bien le calcul de l'histogramme orienté du gradient 
+\cite{Dalal05histogramsof}, cela sur un patch carré centré autour de chaque pixel. 
 
 \section{Extraction de saturation pour les illustrations}
 
@@ -163,7 +164,7 @@ Les features extraits au chapître précédents doivent donc être décomposer e
 \begin{description} % listes descriptives
 
 \item[$KMeans$ :] cet algorithme permet de créer deux amas compactes par minimisation de l'énergie intra-cluster.
-\item[$NMF$ :] cet algorithme permet de projeter les features des N pixels. Ces features de dimension P seront projetés sur un espace à 2 dimensions. On crééra ensuite
+\item[$NMF$ (\begin{itshape}Non-Negative Matrix Factorization\end{itshape} :] cet algorithme permet de projeter les features des N pixels. Ces features de dimension P seront projetés sur un espace à 2 dimensions positives. On crééra ensuite
 deux amas : un premier pour les points dont la première composante de projection est plus grande que la seconde, un second pour les autres.
 
 \end{description}
@@ -178,7 +179,7 @@ La figure \ref{resultat} montre l'application du $KMeans$ sur les descripteurs $
 \includegraphics[scale=0.06]{images/1g_res_hog_hsv.jpg}
 \includegraphics[scale=0.3]{images/1g_m.jpg}
 \end{center}
-\caption{attribution de la classe $illustration$ (rouge) ou $texte$ (bleu) par $KMeans$ - en bas, la vérité terrain}
+\caption{attribution de la classe $illustration$ (rouge) ou $texte$ (bleu) par $KMeans$ sur les dscripteurs $HOG+HSV$ - en bas, la vérité terrain}
 \label{resultat}
 \end{figure}
 
@@ -276,6 +277,40 @@ La figure \ref{meilleur_rappel} présente l'image donnant le meilleur rappel (\b
 
 \clearpage
 
+\chapter{Test}
+
+Nous avons cherché à verifier la généralité de notre méthode, en la testant sur des articles de revue numérisés provenant d'alphabets
+différents.\\
+Nous avons récupéré trois scans d'images prises totalement au hasard sur le net, en arabe, en hébreux et en japonais, les résultats
+respectifs sont illustrés dans les figures \ref{test1} \ref{test2} \ref{test3}:\\ 
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.05]{../test/arabic.png}
+\includegraphics[scale=0.05]{../test/arabic_res_hog_hsv_kmeans.jpg}
+\end{center}
+\caption{test de la méthode sur l'image arabic.png}
+\label{test1}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.05]{../test/hebraic.jpg}
+\includegraphics[scale=0.05]{../test/hebraic_res_hog_hsv_kmeans.jpg}
+\end{center}
+\caption{test de la méthode sur l'image hebraic.jpg}
+\label{test2}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.05]{../test/japanese.jpg}
+\includegraphics[scale=0.05]{../test/japanese_res_hog_hsv_kmeans.jpg}
+\end{center}
+\caption{test de la méthode sur l'image japanese.jpg}
+\label{test3}
+\end{figure}
+
 \chapter{Code}
 
 Le code $Python$ ayant permis les calculs présentés, se constitue de trois fichiers :
@@ -297,16 +332,6 @@ Nous présentons donc ci-après les résultats sur 96 fichiers avec les descript
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.6]{../data_papers/20_res_hog_hsv_kmeans_all.jpg}
-\end{center}
-\caption{image donnant la précision moyenne maximale - en bas sa vérité-terrain}
-\label{meilleur_precision}
-\end{figure}
-
-
-image 10.jpg : 
-\begin{figure}[H]
-\begin{center}
 \includegraphics[scale=0.6]{../data_papers/10_res_hog_hsv_kmeans_all.jpg}
 \end{center}
 \caption{de gauche à droite : image 10.jpg, binarisation, decomposition, vérité-terrain}
@@ -315,7 +340,6 @@ image 10.jpg :
 \clearpage
 
 
-image 11.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/11_res_hog_hsv_kmeans_all.jpg}
@@ -326,7 +350,6 @@ image 11.jpg :
 \clearpage
 
 
-image 12.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/12_res_hog_hsv_kmeans_all.jpg}
@@ -337,7 +360,6 @@ image 12.jpg :
 \clearpage
 
 
-image 13.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/13_res_hog_hsv_kmeans_all.jpg}
@@ -348,7 +370,6 @@ image 13.jpg :
 \clearpage
 
 
-image 14.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/14_res_hog_hsv_kmeans_all.jpg}
@@ -359,7 +380,6 @@ image 14.jpg :
 \clearpage
 
 
-image 15.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/15_res_hog_hsv_kmeans_all.jpg}
@@ -370,7 +390,6 @@ image 15.jpg :
 \clearpage
 
 
-image 16.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/16_res_hog_hsv_kmeans_all.jpg}
@@ -381,7 +400,6 @@ image 16.jpg :
 \clearpage
 
 
-image 17.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/17_res_hog_hsv_kmeans_all.jpg}
@@ -392,7 +410,6 @@ image 17.jpg :
 \clearpage
 
 
-image 18.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/18_res_hog_hsv_kmeans_all.jpg}
@@ -403,7 +420,6 @@ image 18.jpg :
 \clearpage
 
 
-image 19.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/19_res_hog_hsv_kmeans_all.jpg}
@@ -414,7 +430,6 @@ image 19.jpg :
 \clearpage
 
 
-image 1cw.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/1cw_res_hog_hsv_kmeans_all.jpg}
@@ -425,7 +440,6 @@ image 1cw.bmp :
 \clearpage
 
 
-image 1g.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/1g_res_hog_hsv_kmeans_all.jpg}
@@ -436,7 +450,6 @@ image 1g.tif :
 \clearpage
 
 
-image 1.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/1_res_hog_hsv_kmeans_all.jpg}
@@ -447,7 +460,6 @@ image 1.jpg :
 \clearpage
 
 
-image 1m.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/1m_res_hog_hsv_kmeans_all.jpg}
@@ -458,7 +470,6 @@ image 1m.bmp :
 \clearpage
 
 
-image 1s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/1s_res_hog_hsv_kmeans_all.jpg}
@@ -469,7 +480,6 @@ image 1s.bmp :
 \clearpage
 
 
-image 20.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/20_res_hog_hsv_kmeans_all.jpg}
@@ -480,7 +490,6 @@ image 20.jpg :
 \clearpage
 
 
-image 21.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/21_res_hog_hsv_kmeans_all.jpg}
@@ -491,7 +500,6 @@ image 21.jpg :
 \clearpage
 
 
-image 22.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/22_res_hog_hsv_kmeans_all.jpg}
@@ -502,7 +510,6 @@ image 22.jpg :
 \clearpage
 
 
-image 23.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/23_res_hog_hsv_kmeans_all.jpg}
@@ -513,7 +520,6 @@ image 23.jpg :
 \clearpage
 
 
-image 24.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/24_res_hog_hsv_kmeans_all.jpg}
@@ -524,7 +530,6 @@ image 24.jpg :
 \clearpage
 
 
-image 25.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/25_res_hog_hsv_kmeans_all.jpg}
@@ -535,7 +540,6 @@ image 25.jpg :
 \clearpage
 
 
-image 26.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/26_res_hog_hsv_kmeans_all.jpg}
@@ -546,7 +550,6 @@ image 26.jpg :
 \clearpage
 
 
-image 27.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/27_res_hog_hsv_kmeans_all.jpg}
@@ -557,7 +560,6 @@ image 27.jpg :
 \clearpage
 
 
-image 28.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/28_res_hog_hsv_kmeans_all.jpg}
@@ -568,7 +570,6 @@ image 28.jpg :
 \clearpage
 
 
-image 29.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/29_res_hog_hsv_kmeans_all.jpg}
@@ -579,7 +580,6 @@ image 29.jpg :
 \clearpage
 
 
-image 2cw.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/2cw_res_hog_hsv_kmeans_all.jpg}
@@ -590,7 +590,6 @@ image 2cw.bmp :
 \clearpage
 
 
-image 2g.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/2g_res_hog_hsv_kmeans_all.jpg}
@@ -601,7 +600,6 @@ image 2g.tif :
 \clearpage
 
 
-image 2.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/2_res_hog_hsv_kmeans_all.jpg}
@@ -612,7 +610,6 @@ image 2.jpg :
 \clearpage
 
 
-image 2m.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/2m_res_hog_hsv_kmeans_all.jpg}
@@ -623,7 +620,6 @@ image 2m.bmp :
 \clearpage
 
 
-image 2s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/2s_res_hog_hsv_kmeans_all.jpg}
@@ -634,7 +630,6 @@ image 2s.bmp :
 \clearpage
 
 
-image 30.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/30_res_hog_hsv_kmeans_all.jpg}
@@ -645,7 +640,6 @@ image 30.jpg :
 \clearpage
 
 
-image 31.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/31_res_hog_hsv_kmeans_all.jpg}
@@ -656,7 +650,6 @@ image 31.jpg :
 \clearpage
 
 
-image 32.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/32_res_hog_hsv_kmeans_all.jpg}
@@ -667,7 +660,6 @@ image 32.jpg :
 \clearpage
 
 
-image 33.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/33_res_hog_hsv_kmeans_all.jpg}
@@ -678,7 +670,6 @@ image 33.jpg :
 \clearpage
 
 
-image 34.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/34_res_hog_hsv_kmeans_all.jpg}
@@ -689,7 +680,6 @@ image 34.jpg :
 \clearpage
 
 
-image 35.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/35_res_hog_hsv_kmeans_all.jpg}
@@ -700,7 +690,6 @@ image 35.jpg :
 \clearpage
 
 
-image 36.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/36_res_hog_hsv_kmeans_all.jpg}
@@ -711,7 +700,6 @@ image 36.jpg :
 \clearpage
 
 
-image 37.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/37_res_hog_hsv_kmeans_all.jpg}
@@ -722,7 +710,6 @@ image 37.jpg :
 \clearpage
 
 
-image 38.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/38_res_hog_hsv_kmeans_all.jpg}
@@ -733,7 +720,6 @@ image 38.jpg :
 \clearpage
 
 
-image 39.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/39_res_hog_hsv_kmeans_all.jpg}
@@ -744,7 +730,6 @@ image 39.jpg :
 \clearpage
 
 
-image 3cw.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/3cw_res_hog_hsv_kmeans_all.jpg}
@@ -755,7 +740,6 @@ image 3cw.bmp :
 \clearpage
 
 
-image 3g.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/3g_res_hog_hsv_kmeans_all.jpg}
@@ -766,7 +750,6 @@ image 3g.tif :
 \clearpage
 
 
-image 3.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/3_res_hog_hsv_kmeans_all.jpg}
@@ -777,7 +760,6 @@ image 3.jpg :
 \clearpage
 
 
-image 3m.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/3m_res_hog_hsv_kmeans_all.jpg}
@@ -788,7 +770,6 @@ image 3m.bmp :
 \clearpage
 
 
-image 3s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/3s_res_hog_hsv_kmeans_all.jpg}
@@ -799,7 +780,6 @@ image 3s.bmp :
 \clearpage
 
 
-image 40.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/40_res_hog_hsv_kmeans_all.jpg}
@@ -810,7 +790,6 @@ image 40.jpg :
 \clearpage
 
 
-image 41.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/41_res_hog_hsv_kmeans_all.jpg}
@@ -821,7 +800,6 @@ image 41.jpg :
 \clearpage
 
 
-image 42.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/42_res_hog_hsv_kmeans_all.jpg}
@@ -832,7 +810,6 @@ image 42.jpg :
 \clearpage
 
 
-image 43.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/43_res_hog_hsv_kmeans_all.jpg}
@@ -843,7 +820,6 @@ image 43.jpg :
 \clearpage
 
 
-image 44.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/44_res_hog_hsv_kmeans_all.jpg}
@@ -854,7 +830,6 @@ image 44.jpg :
 \clearpage
 
 
-image 45.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/45_res_hog_hsv_kmeans_all.jpg}
@@ -865,7 +840,6 @@ image 45.jpg :
 \clearpage
 
 
-image 46.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/46_res_hog_hsv_kmeans_all.jpg}
@@ -876,7 +850,6 @@ image 46.jpg :
 \clearpage
 
 
-image 47.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/47_res_hog_hsv_kmeans_all.jpg}
@@ -887,7 +860,6 @@ image 47.jpg :
 \clearpage
 
 
-image 48.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/48_res_hog_hsv_kmeans_all.jpg}
@@ -898,7 +870,6 @@ image 48.jpg :
 \clearpage
 
 
-image 49.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/49_res_hog_hsv_kmeans_all.jpg}
@@ -909,7 +880,6 @@ image 49.jpg :
 \clearpage
 
 
-image 4cw.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/4cw_res_hog_hsv_kmeans_all.jpg}
@@ -920,7 +890,6 @@ image 4cw.bmp :
 \clearpage
 
 
-image 4g.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/4g_res_hog_hsv_kmeans_all.jpg}
@@ -931,7 +900,6 @@ image 4g.tif :
 \clearpage
 
 
-image 4.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/4_res_hog_hsv_kmeans_all.jpg}
@@ -942,7 +910,6 @@ image 4.jpg :
 \clearpage
 
 
-image 4m.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/4m_res_hog_hsv_kmeans_all.jpg}
@@ -953,7 +920,6 @@ image 4m.bmp :
 \clearpage
 
 
-image 4s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/4s_res_hog_hsv_kmeans_all.jpg}
@@ -964,7 +930,6 @@ image 4s.bmp :
 \clearpage
 
 
-image 50.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/50_res_hog_hsv_kmeans_all.jpg}
@@ -975,7 +940,6 @@ image 50.jpg :
 \clearpage
 
 
-image 51.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/51_res_hog_hsv_kmeans_all.jpg}
@@ -986,7 +950,6 @@ image 51.jpg :
 \clearpage
 
 
-image 52.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/52_res_hog_hsv_kmeans_all.jpg}
@@ -997,7 +960,6 @@ image 52.jpg :
 \clearpage
 
 
-image 53.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/53_res_hog_hsv_kmeans_all.jpg}
@@ -1008,7 +970,6 @@ image 53.jpg :
 \clearpage
 
 
-image 54.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/54_res_hog_hsv_kmeans_all.jpg}
@@ -1019,7 +980,6 @@ image 54.jpg :
 \clearpage
 
 
-image 55.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/55_res_hog_hsv_kmeans_all.jpg}
@@ -1030,7 +990,6 @@ image 55.jpg :
 \clearpage
 
 
-image 56.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/56_res_hog_hsv_kmeans_all.jpg}
@@ -1041,7 +1000,6 @@ image 56.jpg :
 \clearpage
 
 
-image 57.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/57_res_hog_hsv_kmeans_all.jpg}
@@ -1052,7 +1010,6 @@ image 57.jpg :
 \clearpage
 
 
-image 58.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/58_res_hog_hsv_kmeans_all.jpg}
@@ -1063,7 +1020,6 @@ image 58.jpg :
 \clearpage
 
 
-image 59.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/59_res_hog_hsv_kmeans_all.jpg}
@@ -1074,7 +1030,6 @@ image 59.jpg :
 \clearpage
 
 
-image 5cw.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/5cw_res_hog_hsv_kmeans_all.jpg}
@@ -1085,7 +1040,6 @@ image 5cw.bmp :
 \clearpage
 
 
-image 5g.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/5g_res_hog_hsv_kmeans_all.jpg}
@@ -1096,7 +1050,6 @@ image 5g.tif :
 \clearpage
 
 
-image 5.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/5_res_hog_hsv_kmeans_all.jpg}
@@ -1107,7 +1060,6 @@ image 5.jpg :
 \clearpage
 
 
-image 5m.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/5m_res_hog_hsv_kmeans_all.jpg}
@@ -1118,7 +1070,6 @@ image 5m.bmp :
 \clearpage
 
 
-image 5s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/5s_res_hog_hsv_kmeans_all.jpg}
@@ -1129,7 +1080,6 @@ image 5s.bmp :
 \clearpage
 
 
-image 60.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/60_res_hog_hsv_kmeans_all.jpg}
@@ -1140,7 +1090,6 @@ image 60.jpg :
 \clearpage
 
 
-image 61.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/61_res_hog_hsv_kmeans_all.jpg}
@@ -1151,7 +1100,6 @@ image 61.jpg :
 \clearpage
 
 
-image 62.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/62_res_hog_hsv_kmeans_all.jpg}
@@ -1162,7 +1110,6 @@ image 62.jpg :
 \clearpage
 
 
-image 63.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/63_res_hog_hsv_kmeans_all.jpg}
@@ -1173,7 +1120,6 @@ image 63.jpg :
 \clearpage
 
 
-image 64.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/64_res_hog_hsv_kmeans_all.jpg}
@@ -1184,7 +1130,6 @@ image 64.jpg :
 \clearpage
 
 
-image 65.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/65_res_hog_hsv_kmeans_all.jpg}
@@ -1195,7 +1140,6 @@ image 65.jpg :
 \clearpage
 
 
-image 66.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/66_res_hog_hsv_kmeans_all.jpg}
@@ -1206,7 +1150,6 @@ image 66.jpg :
 \clearpage
 
 
-image 67.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/67_res_hog_hsv_kmeans_all.jpg}
@@ -1217,7 +1160,6 @@ image 67.jpg :
 \clearpage
 
 
-image 68.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/68_res_hog_hsv_kmeans_all.jpg}
@@ -1228,7 +1170,6 @@ image 68.jpg :
 \clearpage
 
 
-image 69.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/69_res_hog_hsv_kmeans_all.jpg}
@@ -1239,7 +1180,6 @@ image 69.jpg :
 \clearpage
 
 
-image 6cw.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/6cw_res_hog_hsv_kmeans_all.jpg}
@@ -1250,7 +1190,6 @@ image 6cw.bmp :
 \clearpage
 
 
-image 6g.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/6g_res_hog_hsv_kmeans_all.jpg}
@@ -1261,7 +1200,6 @@ image 6g.tif :
 \clearpage
 
 
-image 6.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/6_res_hog_hsv_kmeans_all.jpg}
@@ -1272,7 +1210,6 @@ image 6.jpg :
 \clearpage
 
 
-image 6m.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/6m_res_hog_hsv_kmeans_all.jpg}
@@ -1283,7 +1220,6 @@ image 6m.bmp :
 \clearpage
 
 
-image 6s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/6s_res_hog_hsv_kmeans_all.jpg}
@@ -1294,7 +1230,6 @@ image 6s.bmp :
 \clearpage
 
 
-image 70.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/70_res_hog_hsv_kmeans_all.jpg}
@@ -1305,7 +1240,6 @@ image 70.jpg :
 \clearpage
 
 
-image 71.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/71_res_hog_hsv_kmeans_all.jpg}
@@ -1316,7 +1250,6 @@ image 71.jpg :
 \clearpage
 
 
-image 72.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/72_res_hog_hsv_kmeans_all.jpg}
@@ -1327,7 +1260,6 @@ image 72.jpg :
 \clearpage
 
 
-image 73.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/73_res_hog_hsv_kmeans_all.jpg}
@@ -1338,7 +1270,6 @@ image 73.jpg :
 \clearpage
 
 
-image 74.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/74_res_hog_hsv_kmeans_all.jpg}
@@ -1349,7 +1280,6 @@ image 74.jpg :
 \clearpage
 
 
-image 75.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/75_res_hog_hsv_kmeans_all.jpg}
@@ -1360,7 +1290,6 @@ image 75.jpg :
 \clearpage
 
 
-image 7.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/7_res_hog_hsv_kmeans_all.jpg}
@@ -1371,7 +1300,6 @@ image 7.jpg :
 \clearpage
 
 
-image 7m.tif : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/7m_res_hog_hsv_kmeans_all.jpg}
@@ -1382,7 +1310,6 @@ image 7m.tif :
 \clearpage
 
 
-image 7s.bmp : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/7s_res_hog_hsv_kmeans_all.jpg}
@@ -1393,7 +1320,6 @@ image 7s.bmp :
 \clearpage
 
 
-image 8.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/8_res_hog_hsv_kmeans_all.jpg}
@@ -1404,7 +1330,6 @@ image 8.jpg :
 \clearpage
 
 
-image 9.jpg : 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.6]{../data_papers/9_res_hog_hsv_kmeans_all.jpg}
@@ -1413,20 +1338,6 @@ image 9.jpg :
 \label{9}
 \end{figure}
 \clearpage
-
-
-image documentation.txt : 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[scale=0.6]{../data_papers/documentation_res_hog_hsv_kmeans_all.jpg}
-\end{center}
-\caption{de gauche à droite : image documentation.txt, binarisation, decomposition, vérité-terrain}
-\label{documentation}
-\end{figure}
-\clearpage
-
-
-
 
 
 \clearpage
